# doom-dashboard

./: .gitignore  README.md  _vizdoom.ini  auto_validate_v10.py  bench_model.py  config.yaml  diagnose_policy.py  eval_sf_detailed.py  log_sf_results_wandb.py  make_showcase.py  monitor_mp.sh  monitor_sf_training.py  monitor_training_v2.sh  overnight_monitor.sh  post_training_launch.sh  pretrain_bc.py  pyproject.toml  quick_bench.sh  record_gameplay.sh  record_vs_ai.py  run_sf_agent.py  sample_sf_frames.py  selfplay_overnight.sh  test_stochastic_video.py  tloop_v10.sh  tloop_v11.sh  tloop_v11_fs.sh  tloop_v11_lstm.sh  tloop_v12_fullaction_lstm.sh  train_overnight_dm.py  train_policies.py  train_sf_deathmatch.py  validate_and_showcase.sh
doom_dashboard/: __main__.py  _archs.py  alignment.py  annotate.py  cli.py  config.py  dataset_gen.py  mp_dataset_gen.py  multiplayer_rollout.py  policies.py  rollout.py  server.py
doom_dashboard/scenarios/: cig_fullaction.cfg  deathmatch_compact.cfg  deathmatch_fullaction.cfg  deathmatch_nomonsters.cfg  deathmatch_nomonsters.wad  elimination_arena.cfg
doom_dashboard/static/: index.html
results_latest/: README.md  eval_00_bots_128_fs2_narrow_see_0.json  eval_sf_dm_train_v1.json
results_latest/competition_submission/: SUBMISSION.md  v11a_lstm_latest.meta.json
results_latest/competition_submission_v2/: SUBMISSION.md
results_latest/competition_submission_v3/: SUBMISSION.md  bc_only_lstm.meta.json  bc_v2_highent_best.meta.json
sf_train_dir/00_bots_128_fs2_narrow_see_0/: config.json
sf_train_dir/sf_dm_train_v1/: config.json
(+2 files in other folders)
